# sales-data-engineering-pipeline

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-airflow.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
analysis/: check_data.ipynb  sales_analysis.ipynb
config/: config.yaml
dags/: sales_pipeline_dag.py
data/output/: sales.db
data/processed/: orders_enriched.parquet  sales_summary.parquet
data/raw/: customers.csv  orders.csv  products.csv
src/: pipeline.py
src/extract/: extractor.py
src/load/: loader.py
src/sales_data_engineering_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transform/: transformer.py
tests/: test_extractor.py  test_loader.py  test_transformer.py
